--- a/docs/使用说明书.md
+++ b/docs/使用说明书.md
@@ -93,30 +93,30 @@ EEG（C3, C4, Cz, Oz）
 | `udp_target` | [str, int] | UDP 目标地址与端口 |
 
 ## 7. 启动流程
-### 7.1 连接真实硬件
+### 7.1 Windows 一键启动
+```powershell
+scripts\start_windows.bat              # 可附加 --mock --duration 等参数
+```
+该批处理脚本会自动创建/激活虚拟环境、安装依赖，并分别启动控制器、vJoy 桥接与遥测仪表盘。关闭弹出的窗口即可结束对应服务。
+
+### 7.2 手动启动（跨平台通用）
 ```bash
 python python/bci_controller.py
 ```
 程序将先进行约 25 秒基线校准，然后持续输出四轴指令。
 
-### 7.2 离线调试
+#### 离线调试
 ```bash
 python python/bci_controller.py --mock --duration 30
 ```
 - `--mock`：启用内置虚拟板卡。
 - `--duration`：自动退出前的运行时长（秒），不设置则持续运行。
 
-### 7.3 连接虚拟摇杆
-- **Windows（vJoy）**
-  ```bash
-  python python/feed_vjoy.py
-  ```
-- **Linux（uinput）**
-  ```bash
-  sudo python python/feed_uinput.py
-  ```
+#### 连接虚拟摇杆
+- **Windows（vJoy）**：`python python/feed_vjoy.py`
+- **Linux（uinput）**：`sudo python python/feed_uinput.py`
 
-### 7.4 终端遥测仪表盘
+### 7.3 终端遥测仪表盘
 ```bash
 python python/udp_dashboard.py
 ```
