Update Chinese setup guide for new wizard

--- a/docs/使用说明书.md
+++ b/docs/使用说明书.md
@@ -57,7 +57,19 @@ EEG（C3, C4, Cz, Oz）
    ```bash
    pip install -r python/requirements.txt
    ```
-4. **可选：Rust 组件**
+4. **运行中英双语引导程序（推荐）**
+   ```bash
+   python -m python.main --wizard              # 默认为英文
+   python -m python.main --wizard --wizard-language zh  # 指定中文流程
+   ```
+   引导程序会：
+   - 检查 numpy、scipy、pyyaml 等核心依赖是否可用。
+   - 根据所选控制后端（Windows vJoy/ViGEm 或 Linux uinput）提示缺失的驱动/库。
+   - 可选检查 BrainFlow SDK，以便在真实硬件模式下采集 OpenBCI 数据。
+   - 引导填写 UDP 地址/端口、俯仰轴反向、油门缩放、是否开启模拟 EEG、是否自动启动终端仪表板等偏好。
+   - 将配置保存在 `config/user_profiles/<名称>.json`，并自动记住最后一次选择。
+
+5. **可选：Rust 组件**
    ```bash
    rustup toolchain install stable
    cd rust/bci_receiver
@@ -92,35 +104,55 @@ EEG（C3, C4, Cz, Oz）
 | `calibration_sec` | float | 基线校准时长（秒） |
 | `udp_target` | [str, int] | UDP 目标地址与端口 |
 
+### 6.3 用户配置档 `user_profiles/*.json`
+运行引导程序后，会在 `config/user_profiles/` 目录下生成个性化配置档案，最后一次使用的配置路径会写入 `.last_profile`，供统一入口自动加载。字段说明：
+
+| 字段 | 类型 | 说明 |
+|------|------|------|
+| `language` | str | 引导时选择的界面语言（`en` 或 `zh`），用于运行时提示 |
+| `control_backend` | str | `vigem`（Windows vJoy/ViGEm）或 `uinput`（Linux 虚拟摇杆） |
+| `udp_host` / `udp_port` | str / int | 控制器、虚拟摇杆与仪表板共用的 UDP 地址与端口 |
+| `invert_pitch` | bool | 是否在运行时反转俯仰轴 |
+| `throttle_scale` | float | 油门缩放倍率（0.1–2.0），用于适配不同模拟器的灵敏度 |
+| `mock_mode` | bool | 是否默认启用模拟 EEG（无需连接 OpenBCI 硬件） |
+| `launch_dashboard` | bool | 启动时是否自动打开终端遥测仪表板 |
+
 ## 7. 启动流程
-### 7.1 Windows 一键启动
-```powershell
-scripts\start_windows.bat              # 可附加 --mock --duration 等参数
-```
-该批处理脚本会自动创建/激活虚拟环境、安装依赖，并分别启动控制器、vJoy 桥接与遥测仪表盘。关闭弹出的窗口即可结束对应服务。
-
-### 7.2 手动启动（跨平台通用）
+### 7.1 推荐：统一运行入口
 ```bash
-python python/bci_controller.py
-```
-程序将先进行约 25 秒基线校准，然后持续输出四轴指令。
+# 直接加载最近一次使用的配置
+python -m python.main
 
-#### 离线调试
+# 指定配置档（可使用绝对路径/自定义名称）
+python -m python.main --config config/user_profiles/my_profile.json
+
+# 常用覆盖参数
+python -m python.main --mock           # 强制使用模拟 EEG（忽略配置档设定）
+python -m python.main --hardware       # 强制连接真实 OpenBCI
+python -m python.main --no-dashboard   # 不自动启动终端仪表板
+```
+统一入口会读取配置档，自动启动以下进程，并在按下 `Ctrl+C` 后依次发送 SIGINT 实现平滑退出：
+- **BCI 控制器**（`python.bci_controller`）：完成 BrainFlow 数据接入、特征提取与四轴指令输出，运行时会套用配置档中的俯仰反转与油门缩放。
+- **虚拟摇杆桥接**（`python.feed_vjoy` / `python.feed_uinput`）：根据操作系统自动选择，使用同一组 UDP 地址/端口。
+- **终端遥测仪表板**（`python.udp_dashboard`）：若配置为启用，将实时显示 Yaw/Altitude/Pitch/Throttle 曲线，便于校准与监控。
+
+### 7.2 手动启动（高级调试）
+在需要逐个排查模块或进行自定义组合时，可独立运行以下命令：
 ```bash
+# 控制器（真实硬件 / 模拟）
+python python/bci_controller.py --udp-host 127.0.0.1 --udp-port 5005
 python python/bci_controller.py --mock --duration 30
-```
-- `--mock`：启用内置虚拟板卡。
-- `--duration`：自动退出前的运行时长（秒），不设置则持续运行。
 
-#### 连接虚拟摇杆
-- **Windows（vJoy）**：`python python/feed_vjoy.py`
-- **Linux（uinput）**：`sudo python python/feed_uinput.py`
+# Windows vJoy / ViGEm 桥接
+python python/feed_vjoy.py --host 127.0.0.1 --port 5005 --device-id 1
 
-### 7.3 终端遥测仪表盘
-```bash
-python python/udp_dashboard.py
+# Linux uinput 桥接
+sudo python python/feed_uinput.py --host 127.0.0.1 --port 5005
+
+# 终端遥测仪表盘
+python python/udp_dashboard.py --host 127.0.0.1 --port 5005
 ```
-该程序订阅 UDP 数据并在终端显示四轴实时曲线，便于快速校验。
+请确保所有进程使用一致的 UDP 地址与端口，并在调试结束后手动关闭各个终端窗口。
 
 ## 8. 常见操作场景
 1. **飞行模拟器（如 PX4 SITL + QGroundControl）**
@@ -139,7 +171,7 @@ python python/udp_dashboard.py
 | 输出轴漂移 | 电极接触不良；未完成校准 | 重新检查电极阻抗；确保基线阶段保持静止放松 |
 | vJoy 无法识别 | 驱动未安装或版本过旧 | 重新安装 vJoy，并在设备管理器确认设备正常 |
 | uinput 拒绝访问 | 未授予权限 | 确认 `/etc/udev/rules.d` 中的 uinput 规则，或使用 `sudo` 启动 |
-| Python 程序退出 | 配置缺失或 JSON/YAML 格式错误 | 使用 `python -m json.tool config/channel_map.json` 和 `yamllint config/settings.yaml` 校验 |
+| Python 程序退出 | 配置缺失或 JSON/YAML 格式错误；未生成配置档 | 使用 `python -m json.tool config/channel_map.json`、`yamllint config/settings.yaml` 校验；若提示 “No profile specified”，请先运行 `python -m python.main --wizard` |
 
 ## 10. 自检与测试
 仓库提供以下命令帮助确认环境配置正确：
