--- a/使用说明书.md
+++ b/使用说明书.md
@@ -49,10 +49,14 @@ EEG（C3, C4, Cz, Oz）
    ```bash
    python -m venv .venv
    # Windows PowerShell
-   .venv\\Scripts\\Activate.ps1
+   & .\\.venv\\Scripts\\Activate.ps1
+   # Windows CMD
+   \\.venv\\Scripts\\activate.bat
    # Linux / macOS
    source .venv/bin/activate
    ```
+
+   > ℹ️ **提示**：若在 PowerShell 中执行激活命令时仅打开了 `Activate.ps1` 文件，请确保命令以 `&` 或 `./` 开头，例如 `& .\\.venv\\Scripts\\Activate.ps1`。
 3. **安装依赖**
    ```bash
    pip install -r python/requirements.txt
