--- a/使用说明书.md
+++ b/使用说明书.md
@@ -40,6 +40,16 @@ EEG（C3, C4, Cz, Oz）
 - Windows 端需要安装 vJoy；Linux 端需具备 uinput 权限。
 
 ## 5. 环境部署步骤
+0. **一键环境准备（可选）**
+   ```bash
+   bash <(curl -fsSL https://raw.githubusercontent.com/Skiyoshika/BCI-Flystick/main/scripts/bootstrap.sh)
+   ```
+   该脚本会自动完成仓库克隆/更新、创建 `.venv` 虚拟环境并安装 Python 依赖。若已经下载好仓库，可在仓库根目录执行：
+
+   ```bash
+   bash scripts/bootstrap.sh --skip-git
+   ```
+
 1. **克隆仓库**
    ```bash
    git clone https://github.com/Skiyoshika/BCI-Flystick.git
