--- a/使用说明书.md
+++ b/使用说明书.md
@@ -73,7 +73,7 @@ EEG（C3, C4, Cz, Oz）
    ```
 4. **运行中英双语引导程序（推荐）**
    ```bash
-   python -m python.main --wizard              # 默认为英文
+   python -m python.main --wizard --wizard-language en  # 默认为英文
    python -m python.main --wizard --wizard-language zh  # 指定中文流程
    ```
    引导程序会：
