Refine setup workflow with test GUI and calibration flows

--- a/使用说明书.md
+++ b/使用说明书.md
@@ -77,11 +77,12 @@ EEG（C3, C4, Cz, Oz）
    python -m python.main --wizard --wizard-language zh  # 指定中文流程
    ```
    引导程序会：
-   - 检查 numpy、scipy、pyyaml 等核心依赖是否可用。
-   - 根据所选控制后端（Windows vJoy/ViGEm 或 Linux uinput）提示缺失的驱动/库。
-   - 可选检查 BrainFlow SDK，以便在真实硬件模式下采集 OpenBCI 数据。
-   - 引导填写 UDP 地址/端口、俯仰轴反向、油门缩放、是否开启模拟 EEG、是否自动启动终端仪表板等偏好。
-   - 将配置保存在 `config/user_profiles/<名称>.json`，并自动记住最后一次选择。
+   - 首先询问是进入**测试模式**（模拟脑波）还是**初次校准模式**（真实脑波）。
+   - 检查 numpy、scipy、pyyaml 等核心依赖，并根据所选控制后端提示缺失的驱动/库。
+   - 在需要真实硬件时检测 BrainFlow SDK，确保能够连接 OpenBCI。
+   - 引导填写 UDP 地址/端口、俯仰轴反向、油门缩放、遥测仪表板等偏好。
+   - 根据所选模式生成用户配置 (`config/user_profiles/<名称>.json`) 以及对应的脑波校准记录 (`config/calibration_profiles/`)，自动记住最近一次选择。
+   - 测试模式还会预置按键映射，方便后续通过 GUI 模拟脑波指令。
 
 5. **可选：Rust 组件**
    ```bash
@@ -146,9 +147,10 @@ python -m python.main --hardware       # 强制连接真实 OpenBCI
 python -m python.main --no-dashboard   # 不自动启动终端仪表板
 ```
 统一入口会读取配置档，自动启动以下进程，并在按下 `Ctrl+C` 后依次发送 SIGINT 实现平滑退出：
-- **BCI 控制器**（`python.bci_controller`）：完成 BrainFlow 数据接入、特征提取与四轴指令输出，运行时会套用配置档中的俯仰反转与油门缩放。
+- **BCI 控制器**（`python.bci_controller`）：完成 BrainFlow 数据接入、特征提取与四轴指令输出，运行时会套用配置档中的俯仰反转、轴向极性与油门缩放。
 - **虚拟摇杆桥接**（`python.feed_vjoy` / `python.feed_uinput`）：根据操作系统自动选择，使用同一组 UDP 地址/端口。
 - **终端遥测仪表板**（`python.udp_dashboard`）：若配置为启用，将实时显示 Yaw/Altitude/Pitch/Throttle 曲线，便于校准与监控。
+- **模拟脑波 GUI**（`python.mock_command_gui`）：当使用测试模式生成的配置时自动启动，可通过键盘触发八个动作以驱动 FPV 摇杆。
 
 ### 7.2 手动启动（高级调试）
 在需要逐个排查模块或进行自定义组合时，可独立运行以下命令：
