Add mock console profile and upgrade tooling

--- a/使用说明书.md
+++ b/使用说明书.md
@@ -48,6 +48,9 @@ EEG（C3, C4, Cz, Oz）
 
    ```bash
    bash scripts/bootstrap.sh --skip-git
+
+   # 若仅需在现有虚拟环境中升级依赖
+   bash scripts/bootstrap.sh --skip-git --upgrade-deps
    ```
 
 1. **克隆仓库**
@@ -70,6 +73,9 @@ EEG（C3, C4, Cz, Oz）
 3. **安装依赖**
    ```bash
    pip install -r python/requirements.txt
+
+   # 后续在虚拟环境内更新依赖
+    pip install --upgrade -r python/requirements.txt
    ```
 4. **运行中英双语引导程序（推荐）**
    ```bash
@@ -169,6 +175,21 @@ sudo python python/feed_uinput.py --host 127.0.0.1 --port 5005
 python python/udp_dashboard.py --host 127.0.0.1 --port 5005
 ```
 请确保所有进程使用一致的 UDP 地址与端口，并在调试结束后手动关闭各个终端窗口。
+
+### 7.3 无硬件的 Console 测试套件
+当没有真实脑波输入时，可直接加载仓库内置的八动作模拟配置：
+
+```bash
+python -m python.main --config config/user_profiles/mock_motor_imagery.json
+```
+
+此配置会同时启动 GUI 遥测与 Console 按钮面板。每次按键都会在 Console 底部显示四轴数值，GUI 也会实时跳动。若仍需进一步确认，可手动启动 Console 并打开回显：
+
+```bash
+python -m python.mock_command_gui --calibration config/calibration_profiles/mock_motor_imagery.json --echo
+```
+
+命令行会打印每个发送的 UDP 数据包，即使 vJoy/uinput 尚未工作，也能观测摇杆指令是否正确发送。
 
 ## 8. 常见操作场景
 1. **飞行模拟器（如 PX4 SITL + QGroundControl）**
