docs: document gui installer exe packaging

--- a/使用说明书.md
+++ b/使用说明书.md
@@ -58,6 +58,16 @@ EEG（C3, C4, Cz, Oz）
    > `wsl bash scripts/bootstrap.sh ...`，或直接运行 `& .\.venv\Scripts\python.exe -m pip install --upgrade -r
    > python/requirements.txt` 来升级虚拟环境内的依赖。
 
+**Windows 图形化安装器（可选）**
+
+仓库在 `scripts/gui_installer.py` 中提供了最小化的图形化安装器源码，便于非技术用户部署前四步环境（克隆仓库、创建虚拟环境、安装依赖并生成 `config/channel_map.json`）。使用 [PyInstaller](https://pyinstaller.org/en/stable/) 将其打包成独立的 `.exe`：
+
+```powershell
+pyinstaller --noconsole --onefile scripts/gui_installer.py
+```
+
+上述命令会在 `dist/gui_installer.exe` 中生成安装器。仓库本身不附带预编译的可执行文件，每当依赖或脚本发生实质性调整时，请在本地重新运行打包命令以获得最新版本。生成的安装器在安装流程结束时会提供启动配置向导的选项。
+
 1. **克隆仓库**
    ```bash
    git clone https://github.com/Skiyoshika/BCI-Flystick.git
