Improve test mode command holding and vJoy setup

--- a/使用说明书.md
+++ b/使用说明书.md
@@ -147,11 +147,14 @@ pyinstaller --noconsole --onefile scripts/gui_installer.py
 |------|------|------|
 | `language` | str | 引导时选择的界面语言（`en` 或 `zh`），用于运行时提示 |
 | `control_backend` | str | `vigem`（Windows vJoy/ViGEm）或 `uinput`（Linux 虚拟摇杆） |
+| `vjoy_device_id` | int | Windows 下 vJoy/ViGEm 后端使用的虚拟设备编号，默认 `1`，可在引导程序或手动编辑配置时调整 |
 | `udp_host` / `udp_port` | str / int | 控制器、虚拟摇杆与仪表板共用的 UDP 地址与端口 |
 | `invert_pitch` | bool | 是否在运行时反转俯仰轴 |
 | `throttle_scale` | float | 油门缩放倍率（0.1–2.0），用于适配不同模拟器的灵敏度 |
 | `mock_mode` | bool | 是否默认启用模拟 EEG（无需连接 OpenBCI 硬件） |
 | `launch_dashboard` | bool | 启动时是否自动打开终端遥测仪表板 |
+
+> Windows 环境可通过设置环境变量 `BCI_FLYSTICK_VJOY_ID` 临时覆盖运行时使用的 vJoy 设备编号，无需改动配置文件。
 
 ## 7. 启动流程
 ### 7.1 推荐：统一运行入口
@@ -197,6 +200,8 @@ python python/udp_dashboard.py --host 127.0.0.1 --port 5005
 ```bash
 python -m python.main --config config/user_profiles/mock_motor_imagery.json
 ```
+
+按键 GUI 触发的姿态指令在测试模式下会保持在最新位置，直到再次发送新的动作或点击界面上的 `Neutral` 重置按钮，不会再自动回落到初始状态，便于配合 vJoy 观测持续姿态。
 
 此配置会同时启动 GUI 遥测与 Console 按钮面板。每次按键都会在 Console 底部显示四轴数值，GUI 也会实时跳动。若仍需进一步确认，可手动启动 Console 并打开回显：
 
