docs: add virtualenv refresh command

--- a/使用说明书.md
+++ b/使用说明书.md
@@ -110,6 +110,12 @@ pyinstaller --noconsole --onefile scripts/gui_installer.py
 
    # 后续在虚拟环境内更新依赖
    pip install --upgrade -r python/requirements.txt
+
+   # 在现有仓库内直接更新代码与依赖（无需删除重克隆）
+   git pull --ff-only
+   source .venv/bin/activate                # Linux / macOS
+   & .\\.venv\\Scripts\\Activate.ps1          # Windows PowerShell
+   pip install --upgrade -r python/requirements.txt
    ```
 4. **运行中英双语引导程序（推荐）**
    ```bash
